# energy_sales_forecast_v2

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/energy_sales_forecast/: forecasting.py
tests/: test_forecasting.py
